# stprofiler

./: CHANGELOG.md  LICENSE  README.md  feature_test.ipynb  new_features.csv  old_features.csv  pyproject.toml  requirements.txt  setup.py  test_func_image.ipynb
STProfiler/: __init__.py
STProfiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
STProfiler/classify/: KNN_classify.py  MLP_classify.py  RF_classify.py  result_plot.py
STProfiler/feature/: feature_extraction.py
STProfiler/image/: cell_classify.py  cell_segmentation.py  foci_detection.py
features/LCMV_BMS_STAT1_CXCL10/: MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-1-Airyscan Processing-05STP_features_C1.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-1-Airyscan Processing-05STP_features_C2.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-2-Airyscan Processing-06STP_features_C1.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-2-Airyscan Processing-06STP_features_C2.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-3-02-Airyscan Processing-01STP_features_C1.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-3-02-Airyscan Processing-01STP_features_C2.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-4-Airyscan Processing-02STP_features_C1.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-4-Airyscan Processing-02STP_features_C2.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-5-Airyscan Processing-03STP_features_C1.csv  MAX_LCMV-BMS-842091-1L -Mx1-PDL1-INS-DAPI-5-Airyscan Processing-03STP_features_C2.csv  (+102 more)
test notebooks/: test_func.ipynb  test_func_image.ipynb
(+392 files in other folders)
